# provably-safe-sandboxing-wasm-usenix22

./: .gitmodules  .internal-reference  Dockerfile  LICENSE  README.md
benchmarks/: README.md  benchify.toml  iwasm  wasm3-cosmopolitan.com
benchmarks/.generated/: .gitignore  2mm.vasm  2mm.wat  3mm.vasm  3mm.wat  README.md  adi.vasm  adi.wat  atax.vasm  atax.wat  bicg.vasm  bicg.wat  cholesky.vasm  cholesky.wat  correlation.vasm  correlation.wat  covariance.vasm  covariance.wat  doitgen.vasm  doitgen.wat  durbin.vasm  durbin.wat  dynprog.vasm  dynprog.wat  fdtd-2d.vasm  fdtd-2d.wat  fdtd-apml.vasm  fdtd-apml.wat  floyd-warshall.vasm  floyd-warshall.wat  gemm.vasm  gemm.wat  gemver.vasm  gemver.wat  gesummv.vasm  gesummv.wat  gramschmidt.vasm  gramschmidt.wat  jacobi-1d-imper.vasm  jacobi-1d-imper.wat  (+22 more)
benchmarks/polybench-c/: .gitignore  Makefile  README.md
benchmarks/preparation/: README.md
benchmarks/wasm2c-helpers/: wasm2c-runner.c
figures/: .gitignore  Makefile  README.md  compilation-time.py  data.csv  execution-time-per-benchmark.py  execution-time.py  microbench-mem-access.py  prep_time.csv  toolnames.py
image-conversion-scenario/: .gitignore  Makefile  README.md  benchify.toml  see_cve_impacts.sh
image-conversion-scenario/libjpeg-wasi/: README.md  cjpeg-static.wasm  djpeg-static.wasm  jpegtran-static.wasm
image-conversion-scenario/libraries/: .gitignore  Makefile
microbenchmark-compare-read-arr/: Cargo.toml  README.md
microbenchmark-compare-read-arr/benches/: my_benchmark.rs
microbenchmark-compare-read-arr/src/: lib.rs
(+122 files in other folders)
